# kiun-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yml  dockerignore  manage.py  pyproject.toml  requirements.prod.txt  requirements.txt
accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_about.py  0003_customuser_contact_email_customuser_name.py  0004_sociallink_customuser_social_links.py  0005_remove_customuser_social_links_sociallink_user.py  0006_remove_sociallink_user.py
kiun/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
projects/: models.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_tags_alter_project_image.py  0003_alter_project_image.py  0004_alter_project_image.py  0005_alter_project_image.py
skills/: models.py  serializers.py  tests.py  urls.py  views.py
skills/migrations/: 0001_initial.py  0002_remove_skill_technologies_skill_tags_and_more.py
studies/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
studies/migrations/: 0001_initial.py  0002_alter_certification_start_date_and_more.py
