[tool.poetry]
name = "kiun"
version = "0.1.0"
description = ""
authors = ["daniel <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.0"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
django-taggit = "^3.1.0"
django-cors-headers = "^3.14.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
django-environ = "^0.10.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.2.0"
commitizen = "^2.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
